examples/BAD/BAD_048_CONSISTENCY_3/main.nut
Data House :=
    - Address: address
    - string: family_name

Data Address :=
    - string: type
    - string: name
    - uint: number

{}
